correccion de archivos incorrectos
se subio una carpeta erroenea ya esta corregido

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./Styles/style.css">
 
 </head>
 <body>
     <header class="header">
         <nav class="header__menu">
             <a class="header__menu__link" href="index.html">Home</a>
-            <a class="header__menu__link" href="about.html">Sobre mí</a>
+            <a class="header__menu__link" href="About.html">Sobre mi</a>
         </nav>
     </header>
     <main class="presentacion">
@@ -29,25 +29,22 @@
                 </p>
                 <div class="presentacion__enlaces">
                     <h2 class="presentacion__enlaces__subtitulo">Accede a mis redes</h2>
+                    <a class="presentacion__enlaces__link" href="https://instagram.com/">
+                        <img src="./assets/instagram.png">
+                        Instagram</a>
                     <a class="presentacion__enlaces__link" href="https://github.com/">
                         <img src="./assets/github.png">
-                        Github
-                    </a>
-                    <a class="presentacion__enlaces__link" href="https://linkedin.com/in/">
-                        <img src="./assets/linkedin.png">
-                        Linkedin
-                    </a>
+                        GitHub</a>
                     <a class="presentacion__enlaces__link" href="https://twitch.tv/">
                         <img src="./assets/twitch.png">
-                        Twitch
-                    </a>
+                        Twitch</a>
                 </div>
                
         </section>
-            <img src="./assets/Imagen.png" alt="Foto de Ana García desarrolando un proyecto">
+            <img class="presentacion__imagen" src="./assets/Imagem.png" alt="Foto de Ana García desarrolando un proyecto">
     </main>
-    <footer class="footer">
-        <p>Desarrollado por Alura Latam</p>
+    <footer class="Footer">
+        <p>Desarrollado por JulioVR</p>
     </footer>
 </body>
 </html>
